Alignment issue in show section

--- a/src/common/side-content/side-content.less
+++ b/src/common/side-content/side-content.less
@@ -107,7 +107,9 @@ div.side-content{
 }
 .left100
 {
+  top: 0px;
   left:100px;
+  bottom: 0px;
 }
 .cblack
 {
